2007-03-25  Thomas Schwinge  <tschwinge@gnu.org>

	* isofs/inode.c (read_disknode): Correctly convert from nanoseconds to
	microseconds.

2005-02-23  Alfred M. Szmidt  <ams@gnu.org>

	* Makefile (iso9660fs.static): New target.

2003-08-31  Marcus Brinkmann  <marcus@gnu.org>

	* main.c (diskfs_readonly, diskfs_hard_readonly): Removed.
	(main): Set diskfs_readonly and diskfs_hard_readonly to one.

2002-09-29  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (target): Change to iso9660fs.
	* main.c (diskfs_server_name): Change to iso9660fs.

2002-08-06  Marcus Brinkmann  <marcus@gnu.org>

	* inode.c (use_file_start_id): Use file_start for directories, so
	the inode of the directory is used for the ".." entries in all
	sub-directories.  Contrary to ChangeLog entry 2001-11-27, this is
	safe, because the ISO9660 specification mandates that the first
	entry in every directory must be ".", so a non-file_start using
	directory record can not be the first one.

2002-06-08  Roland McGrath  <roland@frob.com>

	* inode.c (diskfs_cached_lookup): Use ino_t for argument.

2002-05-08  Roland McGrath  <roland@frob.com>

	* rr.c (rrip_work): Cast pointer to uintptr_t instead of int.

	* main.c (diskfs_append_args): unsigned -> size_t
	* lookup.c (diskfs_get_directs): Likewise.

2001-04-30  Marcus Brinkmann  <marcus@gnu.org>

	* rr.c (rrip_work): In the MATCH_NAME case, free NMBUF if it is
	non-zero before returning.

2001-04-29  Marcus Brinkmann  <marcus@gnu.org>

	* lookup.c (diskfs_get_directs): If an RE entry is encountered,
	just decrement I again. Rearrange the code to check for a new
	logical sector in any case. Also make sure to always release RR
	before returning. This fixes some memory leaks and Debian bug
	report #63373.

2001-02-25  Roland McGrath  <roland@frob.com>

	* lookup.c: Include <stdlib.h> for abort decl.

2001-02-20  Marcus Brinkmann  <marcus@gnu.org>

	* inode.c: Include <time.h>. Reported by Arkadi E. Shishlov
	<arkadi@it.lv>.
