@@ -1,6 +1,10 @@
+2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* inode.c (read_disknode): Adapt to ``struct stat'' changes.
+
 2007-03-25  Thomas Schwinge  <tschwinge@gnu.org>
 
-	* isofs/inode.c (read_disknode): Correctly convert from nanoseconds to
+	* inode.c (read_disknode): Correctly convert from nanoseconds to
 	microseconds.
 
 2005-02-23  Alfred M. Szmidt  <ams@gnu.org>
